fix: product sidebar close overlap on text

--- a/src/pages/products/components/products-sidebar/products-sidebar.css
+++ b/src/pages/products/components/products-sidebar/products-sidebar.css
@@ -9,12 +9,6 @@
     transition: 0.5s ease;
 }
 
-.products-sidebar-close {
-    position: absolute;
-    top: 0;
-    right: 0px;
-}
-
 
 @media only screen and (min-width : 576px) {
     .products-sidebar {
